--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 TODO
 ----
 1. Project logs
-2. Templates email + email with attachments
+2. Templates email + email with attachments - Check SMTP
 3. Api Key Guard
 4. Template generation limitation Guard
 5. AirTable
