--- a/TODO
+++ b/TODO
@@ -1,11 +1,11 @@
 TODO
 ----
-1. Project logs
-2. Templates email + email with attachments - Check SMTP
-3. Api Key Guard
-4. Template generation limitation Guard
-5. AirTable
-6. Assets 
+1. Project logs*
+2. Api Key Guard*
+3. Template generation limitation Guard
+4. AirTable
+5. Assets** 
+6. DB path in .env
 7. Dockerize
 8. Lerna
 9. Move nest dependencies
