--- a/TODO
+++ b/TODO
@@ -1,13 +1,11 @@
 TODO
 ----
-1. Email logs 
-2. AirTable
-3. Assets 
-4. Dockerize
-5. Lerna
-
+1. Assets 
+2. Dockerize
 
 Later
 -----
-7. Move nest dependencies
-8. Protect db with pass
+1. Move nest dependencies
+2. Protect db with pass
+3. AirTable
+4. Google Analytics
