--- a/TODO
+++ b/TODO
@@ -1,10 +1,10 @@
 TODO
 ----
-1. Dockerize + DB location
+1. DB location + postgress
+2. DB build script 
+2. users api
 
-Later
------
-1. Move nest dependencies
-2. Protect db with pass
-3. AirTable
-4. Google Analytics
+Docker
+------
+1. docker build -t muil .
+2. docker run --name muil -d -p 3000:3000 --env-file .env.docker -v /Users/shahaf/Source/new/templates:/app/templates:rw -v /Users/shahaf/Source/new/db:/app/db:rw muil
